rocket_codegen-0.5.1/tests/ui-fail-nightly/typed-uri-bad-type.stderr
error[E0271]: type mismatch resolving `<String as FromParam<'_>>::Error == &str`
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:24:37
   |
24 | fn optionals(id: Option<i32>, name: Result<String, &str>) {  }
   |                                     ^^^^^^^^^^^^^^^^^^^^ expected `Empty`, found `&str`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:15:15
   |
15 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
47 |     uri!(simple(id = "hi"));
   |     ----------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:15:15
   |
15 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
49 |     uri!(simple("hello"));
   |     --------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, i64>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:15:15
   |
15 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, i64>` is not implemented for `usize`
...
51 |     uri!(simple(id = 239239i64));
   |     ---------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Path, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:18:35
   |
18 | fn not_uri_display(id: i32, name: S) {  }
   |                                   ^ the trait `FromUriParam<rocket::http::uri::fmt::Path, _>` is not implemented for `S`
...
53 |     uri!(not_uri_display(10, S));
   |     ---------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x mut &'a [u8]>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x PathBuf>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut PathBuf>>
           and $N others
   = note: this error originates in the macro `rocket_uri_macro_not_uri_display` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Path, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:53:30
   |
53 |     uri!(not_uri_display(10, S));
   |                              ^ the trait `FromUriParam<rocket::http::uri::fmt::Path, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x mut &'a [u8]>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x PathBuf>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut PathBuf>>
           and $N others
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:24:18
   |
24 | fn optionals(id: Option<i32>, name: Result<String, &str>) {  }
   |                  ^^^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>` is not implemented for `i32`, which is required by `std::option::Option<i32>: FromUriParam<rocket::http::uri::fmt::Path, _>`
...
58 |     uri!(optionals(id = Some(10), name = Ok("bob".into())));
   |     ------------------------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <i32 as FromUriParam<P, &'x i32>>
             <i32 as FromUriParam<P, &'x mut i32>>
             <i32 as FromUriParam<P, i32>>
   = note: required for `std::option::Option<i32>` to implement `FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>`
   = note: this error originates in the macro `rocket_uri_macro_optionals` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::string::String: FromUriParam<rocket::http::uri::fmt::Path, Result<_, _>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:24:37
   |
24 | fn optionals(id: Option<i32>, name: Result<String, &str>) {  }
   |                                     ^^^^^^^^^^^^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, Result<_, _>>` is not implemented for `std::string::String`, which is required by `Result<std::string::String, &str>: FromUriParam<rocket::http::uri::fmt::Path, _>`
...
58 |     uri!(optionals(id = Some(10), name = Ok("bob".into())));
   |     ------------------------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <std::string::String as FromUriParam<P, &'a str>>
             <std::string::String as FromUriParam<P, &'x &'a str>>
             <std::string::String as FromUriParam<P, &'x mut &'a str>>
             <std::string::String as FromUriParam<P, &'x mut std::string::String>>
             <std::string::String as FromUriParam<P, &'x std::string::String>>
             <std::string::String as FromUriParam<P, std::string::String>>
   = note: required for `Result<std::string::String, &str>` to implement `FromUriParam<rocket::http::uri::fmt::Path, Result<_, _>>`
   = note: this error originates in the macro `rocket_uri_macro_optionals` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::fmt::Query, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:38:17
   |
38 | fn simple_q(id: isize) {  }
   |                 ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Query, &str>` is not implemented for `isize`
...
60 |     uri!(simple_q("hi"));
   |     -------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: this error originates in the macro `rocket_uri_macro_simple_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::fmt::Query, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:38:17
   |
38 | fn simple_q(id: isize) {  }
   |                 ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Query, &str>` is not implemented for `isize`
...
62 |     uri!(simple_q(id = "hi"));
   |     ------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: this error originates in the macro `rocket_uri_macro_simple_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:41:29
   |
41 | fn other_q(id: usize, rest: S) {  }
   |                             ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
...
64 |     uri!(other_q(100, S));
   |     --------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x mut &'a [u8]>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x PathBuf>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut PathBuf>>
           and $N others
   = note: this error originates in the macro `rocket_uri_macro_other_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:64:23
   |
64 |     uri!(other_q(100, S));
   |                       ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x mut &'a [u8]>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x PathBuf>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut PathBuf>>
           and $N others
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:41:29
   |
41 | fn other_q(id: usize, rest: S) {  }
   |                             ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
...
66 |     uri!(other_q(rest = S, id = 100));
   |     --------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x mut &'a [u8]>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x PathBuf>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut PathBuf>>
           and $N others
   = note: this error originates in the macro `rocket_uri_macro_other_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:66:25
   |
66 |     uri!(other_q(rest = S, id = 100));
   |                         ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x mut &'a [u8]>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x PathBuf>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut PathBuf>>
           and $N others
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: Ignorable<rocket::http::uri::fmt::Query>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:68:25
   |
68 |     uri!(other_q(rest = _, id = 100));
   |                         ^ the trait `Ignorable<rocket::http::uri::fmt::Query>` is not implemented for `S`
   |
   = help: the following other types implement trait `Ignorable<P>`:
             Result<T, E>
             std::option::Option<T>
note: required by a bound in `assert_ignorable`
  --> $WORKSPACE/core/http/src/uri/fmt/uri_display.rs
   |
   | pub fn assert_ignorable<P: Part, T: Ignorable<P>>() {  }
   |                                     ^^^^^^^^^^^^ required by this bound in `assert_ignorable`

error[E0277]: the trait bound `usize: Ignorable<rocket::http::uri::fmt::Query>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:70:33
   |
70 |     uri!(other_q(rest = S, id = _));
   |                                 ^ the trait `Ignorable<rocket::http::uri::fmt::Query>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Ignorable<P>`:
             Result<T, E>
             std::option::Option<T>
note: required by a bound in `assert_ignorable`
  --> $WORKSPACE/core/http/src/uri/fmt/uri_display.rs
   |
   | pub fn assert_ignorable<P: Part, T: Ignorable<P>>() {  }
   |                                     ^^^^^^^^^^^^ required by this bound in `assert_ignorable`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:41:29
   |
41 | fn other_q(id: usize, rest: S) {  }
   |                             ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
...
70 |     uri!(other_q(rest = S, id = _));
   |     ------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x mut &'a [u8]>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x PathBuf>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut PathBuf>>
           and $N others
   = note: this error originates in the macro `rocket_uri_macro_other_q` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::fmt::Query, _>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:70:25
   |
70 |     uri!(other_q(rest = S, id = _));
   |                         ^ the trait `FromUriParam<rocket::http::uri::fmt::Query, _>` is not implemented for `S`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x &'a [u8]>>
             <&'a [u8] as FromUriParam<rocket::http::uri::fmt::Query, &'x mut &'a [u8]>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x PathBuf>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut &'a std::path::Path>>
             <&'a std::path::Path as FromUriParam<rocket::http::uri::fmt::Path, &'x mut PathBuf>>
           and $N others
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:15:15
   |
15 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
79 |     uri!(uri!("?foo#bar"), simple(id = "hi"));
   |     ----------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `rocket::http::uri::Reference<'_>: ValidRoutePrefix` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:79:15
   |
79 |     uri!(uri!("?foo#bar"), simple(id = "hi"));
   |          -----^^^^^^^^^^-
   |          |    |
   |          |    the trait `ValidRoutePrefix` is not implemented for `rocket::http::uri::Reference<'_>`
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidRoutePrefix`:
             rocket::http::uri::Absolute<'a>
             rocket::http::uri::Origin<'a>
note: required by a bound in `RouteUriBuilder::with_prefix`
  --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
   |
   |     pub fn with_prefix<P: ValidRoutePrefix>(self, p: P) -> PrefixedRouteUri<P::Output> {
   |                           ^^^^^^^^^^^^^^^^ required by this bound in `RouteUriBuilder::with_prefix`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:15:15
   |
15 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
80 |     uri!(uri!("*"), simple(id = "hi"));
   |     ---------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `rocket::http::uri::Asterisk: ValidRoutePrefix` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:80:15
   |
80 |     uri!(uri!("*"), simple(id = "hi"));
   |          -----^^^-
   |          |    |
   |          |    the trait `ValidRoutePrefix` is not implemented for `rocket::http::uri::Asterisk`
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidRoutePrefix`:
             rocket::http::uri::Absolute<'a>
             rocket::http::uri::Origin<'a>
note: required by a bound in `RouteUriBuilder::with_prefix`
  --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
   |
   |     pub fn with_prefix<P: ValidRoutePrefix>(self, p: P) -> PrefixedRouteUri<P::Output> {
   |                           ^^^^^^^^^^^^^^^^ required by this bound in `RouteUriBuilder::with_prefix`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:15:15
   |
15 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
83 |     uri!(_, simple(id = "hi"), uri!("*"));
   |     ------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `rocket::http::uri::Asterisk: ValidRouteSuffix<rocket::http::uri::Origin<'static>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:83:37
   |
83 |     uri!(_, simple(id = "hi"), uri!("*"));
   |                                -----^^^-
   |                                |    |
   |                                |    the trait `ValidRouteSuffix<rocket::http::uri::Origin<'static>>` is not implemented for `rocket::http::uri::Asterisk`
   |                                required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidRouteSuffix<T>`:
             <rocket::http::uri::Absolute<'a> as ValidRouteSuffix<rocket::http::uri::Absolute<'a>>>
             <rocket::http::uri::Absolute<'a> as ValidRouteSuffix<rocket::http::uri::Origin<'a>>>
             <rocket::http::uri::Reference<'a> as ValidRouteSuffix<rocket::http::uri::Absolute<'a>>>
             <rocket::http::uri::Reference<'a> as ValidRouteSuffix<rocket::http::uri::Origin<'a>>>
note: required by a bound in `RouteUriBuilder::with_suffix`
  --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
   |
   |     pub fn with_suffix<S>(self, suffix: S) -> SuffixedRouteUri<S::Output>
   |            ----------- required by a bound in this associated function
   |         where S: ValidRouteSuffix<Origin<'static>>
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RouteUriBuilder::with_suffix`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:15:15
   |
15 | fn simple(id: usize) {  }
   |               ^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
...
84 |     uri!(_, simple(id = "hi"), uri!("/foo/bar"));
   |     -------------------------------------------- in this macro invocation
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket_uri_macro_simple` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `rocket::http::uri::Origin<'_>: ValidRouteSuffix<rocket::http::uri::Origin<'static>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:84:37
   |
84 |     uri!(_, simple(id = "hi"), uri!("/foo/bar"));
   |                                -----^^^^^^^^^^-
   |                                |    |
   |                                |    the trait `ValidRouteSuffix<rocket::http::uri::Origin<'static>>` is not implemented for `rocket::http::uri::Origin<'_>`
   |                                required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidRouteSuffix<T>`:
             <rocket::http::uri::Absolute<'a> as ValidRouteSuffix<rocket::http::uri::Absolute<'a>>>
             <rocket::http::uri::Absolute<'a> as ValidRouteSuffix<rocket::http::uri::Origin<'a>>>
             <rocket::http::uri::Reference<'a> as ValidRouteSuffix<rocket::http::uri::Absolute<'a>>>
             <rocket::http::uri::Reference<'a> as ValidRouteSuffix<rocket::http::uri::Origin<'a>>>
note: required by a bound in `RouteUriBuilder::with_suffix`
  --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
   |
   |     pub fn with_suffix<S>(self, suffix: S) -> SuffixedRouteUri<S::Output>
   |            ----------- required by a bound in this associated function
   |         where S: ValidRouteSuffix<Origin<'static>>
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RouteUriBuilder::with_suffix`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:47:22
   |
47 |     uri!(simple(id = "hi"));
   |                      ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:49:17
   |
49 |     uri!(simple("hello"));
   |                 ^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, i64>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:51:22
   |
51 |     uri!(simple(id = 239239i64));
   |                      ^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, i64>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:58:25
   |
58 |     uri!(optionals(id = Some(10), name = Ok("bob".into())));
   |                         ^^^^^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>` is not implemented for `i32`, which is required by `std::option::Option<i32>: FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <i32 as FromUriParam<P, &'x i32>>
             <i32 as FromUriParam<P, &'x mut i32>>
             <i32 as FromUriParam<P, i32>>
   = note: required for `std::option::Option<i32>` to implement `FromUriParam<rocket::http::uri::fmt::Path, std::option::Option<{integer}>>`
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::fmt::Query, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:60:19
   |
60 |     uri!(simple_q("hi"));
   |                   ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Query, &str>` is not implemented for `isize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::fmt::Query, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:62:24
   |
62 |     uri!(simple_q(id = "hi"));
   |                        ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Query, &str>` is not implemented for `isize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:79:40
   |
79 |     uri!(uri!("?foo#bar"), simple(id = "hi"));
   |                                        ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:80:33
   |
80 |     uri!(uri!("*"), simple(id = "hi"));
   |                                 ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:83:25
   |
83 |     uri!(_, simple(id = "hi"), uri!("*"));
   |                         ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::fmt::Path, &str>` is not satisfied
  --> tests/ui-fail-nightly/typed-uri-bad-type.rs:84:25
   |
84 |     uri!(_, simple(id = "hi"), uri!("/foo/bar"));
   |                         ^^^^ the trait `FromUriParam<rocket::http::uri::fmt::Path, &str>` is not implemented for `usize`
   |
   = help: the following other types implement trait `FromUriParam<P, T>`:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: this error originates in the macro `rocket::rocket_internal_uri` which comes from the expansion of the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)
